--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,8 +102,8 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.75rem;
     line-height: 1.5;
-    color: black;
-    background-color: white;
+    /* color: black;
+    background-color: white; */
 }
 
 #headerTO {
@@ -252,6 +252,7 @@ h6 {
     font-size: 1rem;
     border-radius: 45px;
     border: 2px solid var(--tan);
+    background-color: var(--grey);
 }
 
 .event-btn:hover {
@@ -291,12 +292,12 @@ h6 {
 
 /* Responsive: LIGHT/DARK Mode */
 /* FunFact OLED Displays  */
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     body {
         background-color: #212b31;
         color: white;
     }
-}
+} */
 
 .footer {
     background-color: var(--grey);
