--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,8 +72,17 @@ Body {
     min-height: 100vh;
     justify-content: center;
     background: linear-gradient(180deg, rgb(237, 171, 27, .400),rgb(222, 149, 24, .400), rgb(184, 101, 12, .400), rgb(140, 67, 7, .400));
-    /* background: linear-gradient(180deg, rgb(1, 8, 30, 0.900),rgba(7, 13, 49, 0.900), rgba(13, 19, 68, 0.800), rgb(19, 24, 86, 0.700), rgb(24, 29, 105, 0.600)); Standard syntax */
+    /* background: linear-gradient(180deg, rgb(1, 8, 30, 0.900),rgba(7, 13, 49, 0.900), rgba(13, 19, 68, 0.800), rgb(19, 24, 86, 0.700), rgb(24, 29, 105, 0.600));  */
 }
+
+/* #light {
+    background: linear-gradient(180deg, rgb(237, 171, 27, .400),rgb(222, 149, 24, .400), rgb(184, 101, 12, .400), rgb(140, 67, 7, .400));
+}
+
+#dark {
+    background: linear-gradient(180deg, rgb(1, 8, 30, 0.900),rgba(7, 13, 49, 0.900), rgba(13, 19, 68, 0.800), rgb(19, 24, 86, 0.700), rgb(24, 29, 105, 0.600)); 
+} */
+
 /* Backdrop Image: of deployed webpage header */
 .hero {
     height: 200px;
