--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ Body {
     background: linear-gradient(180deg, rgb(1, 8, 30, 0.900),rgba(7, 13, 49, 0.900), rgba(13, 19, 68, 0.800), rgb(19, 24, 86, 0.700), rgb(24, 29, 105, 0.600)); 
 }
 
-/* Backdrop Image: of deployed webpage header */
+/* Title "10 Things To DO in Toronto*/ */
 .hero {
     height: 100px;
     width: 100%;
@@ -137,16 +137,16 @@ h6 {
     line-height: 1.1;
     text-align: center;
 }
-
 h1 {
-    font-size: 60px;
-    color: white
+    font-size: 78px;
+    color: white;
+    font-weight: 280;
 }
-
 h2 {
     font-size: 38px;
+    color: white;
+    font-weight: 280;
 }
-
 h3 {
     font-size: 25px;
 }
@@ -157,13 +157,13 @@ h4 {
 
 h5 {
     font-size: 15px;
+    color: rgb(189, 144, 106);
 }
 
 h6 {
     font-size: 10px;
+    color: rgb(189, 144, 106);
 }
-
-
 /* Container blocks - this is holding the blocks into the center of the page - otherwise the containers would be pushed out to the edge of the page */
 .container {
     width: 100%;
@@ -252,11 +252,9 @@ h6 {
     align-items: center;
 }
 
-
 .textbox pre:active {
     user-select: all;
 }
-
 
 .event-btn {
     color: var(--darkGrey);
@@ -275,42 +273,28 @@ h6 {
     transform: translateY(-7px);
 
 }
-
-
 /* Responsive Design */
 @media screen and (min-width: 768px) {
 
     .textbox-column {
         flex: 0 0 50%;
     }
-
-    .hero {}
-
-    .avatar {}
-
 }
-
 /* Responsive Design */
 @media screen and (min-width: 1000px) {
     .textbox-column {
         flex: 0 0 33%;
     }
-
-    .hero {}
-
-    .avatar {}
-
-
 }
 
 /* Responsive: LIGHT/DARK Mode */
 /* FunFact OLED Displays  */
-/* @media (prefers-color-scheme: dark) {
+ @media (prefers-color-scheme: dark) {
     body {
         background-color: #212b31;
         color: white;
     }
-} */
+}
 
 .footer {
     background-color: var(--grey);
